<resources>
    <string name="app_name">Bluetooth LE Analyzer</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="open_source_items">Open Source components</string>
    <string name="about">About</string>
    <string name="copyright">\u00a9 2017 Bertrand Martel</string>
    <string name="github_link">https://github.com/bertrandmartel/bluetooth-le-analyzer</string>
    <string name="bt_device_title">Bluetooth LE Analyzer</string>
    <string name="ble_not_supported">Bluetooth Smart is not supported on your device</string>
    <string name="toast_scan_stop">scanning has stopped</string>
    <string name="toast_scan_start">scanning ...</string>
    <string name="caption_receptin_rate">reception rate per second</string>
    <string name="caption_packet_count">packet count per second</string>
    <string name="toast_bluetooth_disabled">Bluetooth disabled</string>
    <string name="toast_already_scanning">already scanning...</string>
    <string name="addition_average_packet"> in 1 second</string>
    <string name="main_menu_select">Select Bluetooth device type</string>
    <string name="toast_looking_for_rfdroid">Looking for RFdroid ...</string>
    <string name="rfdroid_title">RFdroid - reception rate</string>
    <string name="connection_to_rfdroid">Connecting ...</string>
    <string name="menu_item_title_reception_rate">Switch chart data to \'reception rate\'</string>
    <string name="menu_item_title_packet_count">Switch chart data to \'packet count\'</string>
    <string name="interval">Interval</string>
    <string name="email_addr">bmartel.fr@gmail.com</string>
    <string name="issue_subject">Bluetooth LE Analyzer Issue</string>
    <string name="report_hint">Your error report here...</string>
    <string name="issue_title">Report a problem</string>
    <string name="scan_no_device">no device detected...</string>
    <string name="menu_title_stop_scan">stop scanning</string>
    <string name="menu_title_start_scan">start scanning</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_open_soçurce_components">Open Source components</string>
    <string name="menu_item_report_bugs">Report Bugs</string>
    <string name="menu_item_rfdroid_device">RFdroid device</string>
    <string name="menu_item_switch_data_packet_count">Switch chart data to \'packet count\'</string>
    <string name="permission_required">permission coarse location required for ble scan</string>
</resources>
