<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/switch_chart_data"
            android:icon="@drawable/ic_action_copy"
            android:title="@string/menu_item_switch_data_packet_count"
            android:visible="false" />
        <item
            android:id="@+id/scan_btn_nv"
            android:icon="@drawable/ic_portable_wifi_off"
            android:title="@string/menu_title_stop_scan" />
        <item
            android:id="@+id/rfdroid"
            android:icon="@drawable/ic_memory"
            android:title="@string/menu_item_rfdroid_device" />
        <item
            android:id="@+id/report_bugs"
            android:icon="@drawable/ic_bug_report"
            android:title="@string/menu_item_report_bugs" />

        <item
            android:id="@+id/open_source_components"
            android:icon="@drawable/ic_view_comfy"
            android:title="@string/menu_item_open_soçurce_components" />

        <item
            android:id="@+id/about_app"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/menu_item_about" />
    </group>
</menu>